# shatterbelt-salvagers

./: .gitignore  AGENTS.md  CONTEXT-MAP.md  Cargo.toml  README.md  REQUEST.md
.copilot/hooks/: serena-hooks.json.disabled
.devcontainer/: Dockerfile  allowed-domains.txt  devcontainer.json  init-firewall.sh
.scratch/arena-bot-sdks/: PRD.md
.scratch/arena-bot-sdks/issues/: 01-minimal-ws-starter.md  02-minimal-wasm-starter.md  03-rust-paved-road-template.md  04-assemblyscript-wasm-template.md  05-tinygo-wasm-template.md  06-c-cpp-wasm-template.md  07-zig-wasm-template.md  08-python-ws-starter.md  09-deno-ts-ws-starter.md  10-kotlin-jvm-ws-starter.md
.scratch/arena-engine/: PRD.md
.scratch/arena-engine/issues/: 01-engine-skeleton-determinism.md  02-drift-movement-piloting.md  03-relic-economy-scoring.md  04-rune-cannon-damage.md  05-destruction-kill-bounty.md  06-respawn-spawn-protection.md  07-collisions-hazards.md  08-sigil-framework.md  09-self-buff-sigils.md  10-world-effect-sigils.md  11-headless-harness-replay.md
.scratch/arena-frontend/: PRD.md
.scratch/arena-frontend/issues/: 01-viewer-observer-render.md  02-viewer-camera.md  06-sound-web-audio.md  (+9 more)
.scratch/arena-server/: PRD.md
.serena/: project.yml
docs/adr/: 0001-arena-bot-connection-model.md  0002-arena-tech-stack.md  0003-arena-tick-protocol.md  0004-arena-wasm-abi.md  0005-match-execution-and-ladder.md
docs/agents/: domain.md  triage-labels.md
src/arena/: CONTEXT.md  FRONTEND.md  PROTOCOL.md
src/arena/bots/wasm-rust/: Cargo.toml  README.md
src/arena/bots/wasm-rust/src/: lib.rs
src/arena/server/: Cargo.toml
src/arena/server/src/: admin.rs  auth.rs  bot.rs  events_json.rs  headless.rs  health.rs  ladder.rs  lib.rs  main.rs  observer.rs  pacer.rs  recording.rs  replay.rs  resolver.rs  routes.rs  runner.rs  store.rs  wasm_host.rs  ws.rs
src/arena/server/tests/: admin_tests.rs  auth_tests.rs  bot_management_tests.rs  e2e_tests.rs  headless_tests.rs  health_tests.rs  ladder_runner_tests.rs  ladder_tests.rs  observer_tests.rs  recording_tests.rs  resolver_tests.rs  runner_tests.rs  server_boot_tests.rs  wasm_bot_tests.rs  wasm_host_tests.rs  ws_tests.rs
(+74 files in other folders)
