[package]
name = "arena-server"
version = "0.1.0"
edition = "2021"

[dependencies]
arena-engine = { path = "../engine" }
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.3", features = ["v4"] }

[dev-dependencies]
http = "1.4.2"
http-body-util = "0.1.3"
tower = "0.5.3"
