[package]
name = "arena-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
arena-engine = { path = "../engine" }
axum = { version = "0.8.9", features = ["ws"] }
bytes = "1.12.0"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.3", features = ["v4"] }
wasmtime = "45.0.2"

[dev-dependencies]
http = "1.4.2"
http-body-util = "0.1.3"
reqwest = { version = "0.13.4", features = ["json"] }
tokio-tungstenite = "0.29.0"
tower = "0.5.3"
wat = "1.252.0"
