# Standalone project — own [workspace] table so it is NOT pulled into the
# arena Cargo workspace at the repo root.
[workspace]

[package]
name = "arena-bot-wasm"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib produces a `.wasm` module that exports `memory` and our functions.
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
